Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- Added an example file for *nix (Linux/Unix) .zope-external-edit to use with
  Zope External Editor.
Bug fixes
~~~~~~~~~
- #1871: "Search highlighting does not work anymore".
- Removed cpsinstall.py which is now totally out of date and thus useless.
- French spelling for metadata.
- Added back the publication date in the view layout of the News Item.
- Added a "subjects" CSS class to style the subject widget of the News Item.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 