@@ -12,6 +12,8 @@ Bug fixes
 - French spelling for metadata.
 - Added back the publication date in the view layout of the News Item.
 - Added a "subjects" CSS class to style the subject widget of the News Item.
+- Fixed for the CPSDefault.Extensions.utils.reorderContainerContents the
+  documentation and the way the parameter ascending is passed.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
